# treinamento-python-clean-architecture-tdd

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: deploy-api.yaml
infrastructure/: README.md
infrastructure/modules/dynamo/: main.tf  variable.tf
infrastructure/modules/ecr/: main.tf  output.tf  variables.tf
infrastructure/modules/postgres/: main.tf  output.tf  variables.tf
infrastructure/modules/s3/: main.tf  output.tf  variables.tf
infrastructure/stages/api/: main.tf  terraform.tfstate  variables.tf
infrastructure/stages/prod/: backend.tf  main.tf  provider.tf  variables.tfvars
src/: main.py
src/core/: domain_error.py  jwt.py
src/domain/category/: dto.py  entity.py  usecase_create.py  usecase_delete.py  usecase_get.py  usecase_list.py  usecase_update.py
src/domain/product/: dto.py  entity.py  usecase_create.py  usecase_delete.py  usecase_get.py  usecase_list.py  usecase_update.py
src/domain/user/: dto.py  entity.py  usecase_create.py  usecase_login.py  usecase_me.py  usecase_update.py
src/infra/driver/: contract.py  driver.py  error_map.py
src/infra/migration/: 01_users.sql  02_categories.sql  03_products.sql  migrate.py
src/infra/security/: security.py
src/presentation/: deps.py  health.py  routers.py
src/presentation/contract/: category.py  product.py  user.py
tests/: conftest.py
tests/integration/: test_app.py  test_driver_connection.py  test_migrate.py
(+57 files in other folders)
