[project]
name = "treinamento-python-clean-architecture-tdd"
version = "0.1.0"
description = "Treinamento Python Clean Architecture + TDD"
authors = [
    {name = "dsilva",email = "daniel.silvamiranda02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.9.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
aws-wsgi = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
